desktop/sources/links/main.css
@charset "utf-8";

::-webkit-scrollbar { display: none; margin: 0; padding: 0; }
body { font-family: 'input_mono_regular'; font-size: 12px; overflow: auto; transition: background-color 500ms; }
body navi { display: block;width: calc((100vw / 4) - 40px);left: 0px;position: absolute;padding: 30px; -webkit-user-select: none;-webkit-app-region: drag;
  overflow: auto;
  padding-top:90px;transition: opacity 200ms 200ms, translateY 150ms, width 200ms; opacity:1; }
body navi li { display: flex; flex-direction: row; justify-content: space-between; align-items: center; line-height: 20px; cursor: pointer; position: relative; -webkit-app-region: no-drag; }
body navi li span { overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
body navi li::before { position: absolute; left:-15px;}
body navi li:hover { text-decoration: underline; }
body navi li.page { font-family: 'input_mono_medium' }
body navi li.page::before { content:"/"; }
body navi li.header { }
body navi li.note { padding-left:15px;}
body navi li.note::before { content:"#"; left:0px; }
body navi li.comment {padding-left: 15px;}
body navi li.comment::before { content:"-"; left:0px; }
body navi li.changes::after { content:"*"; position: absolute; right: 15px; }
body navi li i { padding-right:15px; }
body stats { display: block;border-bottom: 0px;margin-top: 30px;position: fixed;bottom:0px;left: 25vw;line-height: 40px;width:calc(75vw - 40px);height:40px;overflow: hidden;-webkit-user-select: none;-webkit-app-region: drag; transition: left 200ms; }
body stats b {  font-family: 'input_mono_medium';}
body stats i { text-decoration: underline; }
body stats .right { float:right; }
body textarea { padding: 90px 0px 0px;height: calc(100vh - 130px);display: block;width: 50vw;position: fixed;left: 25vw;line-height: 20px;resize: none;background: transparent;overflow: auto;max-width: 90%; transition: left 200ms; }
body div { left: 25vw; max-width: 90%; width:50vw; line-height: 20px; font-family: 'input_mono_regular'; font-size: 12px; white-space: pre-wrap; word-wrap:break-word; }
body drag { display: block;width: 100vw;height: 40px;position: fixed;top: 0px;-webkit-user-select: none;-webkit-app-region: drag;}

body #operator { display: block;border-bottom: 0px;margin-top: 30px;position: fixed;bottom: 0px;left: calc((100vw / 2) - 25%);line-height: 40px;width: 540px;height: 40px;overflow: hidden;-webkit-user-select: none;-webkit-app-region: no-drag; bottom:-40px; transition: bottom 150ms }
body #operator.inactive { bottom:-40px; }
body #operator.active { bottom:0px; }

body.mobile navi { opacity:0; transition: opacity 10ms; }
body.mobile textarea { width: 100vw; left: 5%; transition: left 200ms; transition-delay: 20ms; }
body.mobile stats { width: 85%; left: 5%; transition: left 200ms; transition-delay: 20ms; }
body.mobile div { width: 100vw; }

body #theme_button { width: 40px;height: 40px;position: fixed;right: 0px;bottom: 0px;overflow: hidden; cursor: pointer; opacity: 0; transition: opacity 500ms }
body #theme_button_icon { border: 1px solid white;width: 10px;height: 10px;position: absolute;left: 14.5px;top: 14.5px;border-radius: 30px;overflow: hidden; }
body #theme_button_icon_fg { width: 20px;height: 6.5px;background: white;position: relative;left: -2px;top: -2px; transition: top 250ms; }
body #theme_button.active #theme_button_icon_fg { top:5.5px; }
body #theme_button:hover { opacity: 1 }

/* Theme Defaults */

:root { --background: "#222"; --f_high: "#fff";--f_med: "#777";--f_low: "#444";--f_inv: "#000";--b_high: "#000";--b_med: "#555";--b_low: "#000";--b_inv: "#aaa"; }

body { background:var(--background); color:var(--f_high) !important; }
textarea { color:var(--f_high) !important }
stats { color:var(--f_low) !important }
stats b { color:var(--f_high) !important }
stats i { color:var(--f_med) !important }
highlight b { border-bottom: 1px solid var(--f_low) !important; }
::selection { background:var(--b_low) !important; color:var(--f_high) !important }
navi  { color:var(--f_low) !important }
navi li { color:var(--f_med) !important }
navi li i { color:var(--f_low) !important }
navi li.file { color:var(--f_med) !important }
navi li.active { color:var(--f_high) !important }
navi li::before { color:var(--f_low) !important }
body #operator { background:var(--background); color:var(--f_high); }
body #theme_button_icon { border-color: var(--f_med) !important }
body #theme_button_icon_fg { background-color: var(--f_med) !important }

.fh { color:var(--f_high) !important; }
.fm { color:var(--f_med) !important; }
.fl { color:var(--f_low) !important; }

